--- a/geonode/maps/templates/leaflet_maps/map_view.html
+++ b/geonode/maps/templates/leaflet_maps/map_view.html
@@ -20,6 +20,7 @@
           href="https://cdn.rawgit.com/elesdoar/leaflet-control-orderlayers/master/dist/css/leaflet.control.orderlayers.min.css"
           type="text/css"/>
     <link rel="stylesheet" href="{% static 'lib/css/L.Control.Pan.css' %}"/>
+    <link href="{{ STATIC_URL }}geonode/css/map_leaflet.css" rel="stylesheet"/>
     <style type="text/css">
         html, body, #wrap {
             height: 100%;
